k8s/gateway/product-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-service
  namespace: products
  annotations:
    konghq.com/strip-path: "false"
    konghq.com/plugins: correlation-id,key-auth,rate-limit-per-ip,opentelemetry
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api/v1/products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  name: http
          - path: /swagger-ui.html
            pathType: Exact
            backend:
              service:
                name: product-service
                port:
                  name: http
          - path: /swagger-ui
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  name: http
          - path: /v3/api-docs
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  name: http
